exercices/ws2812/ws2812/ws2812/solution1/solution1.log
==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2017.2
Copyright (C) 1986-2017 Xilinx, Inc. All Rights Reserved.

==============================================================

INFO: [SYN 201-201] Setting up clock 'default' with a period of 8ns.
INFO: [HLS 200-10] Setting target device to 'xc7z010clg400-1'
INFO: [SYN 201-201] Setting up clock 'default' with a period of 8ns.
INFO: [HLS 200-10] Analyzing design file 'ws2812.cpp' ... 
WARNING: [HLS 200-40] In file included from ws2812.cpp:2:
./ws2812.h:8:44: error: use of undeclared identifier 'myStream'
typedef hls::stream<ap_axiu<256, 0, 0, 0>> myStream;
                                           ^
./ws2812.h:8:52: error: type name requires a specifier or qualifier
typedef hls::stream<ap_axiu<256, 0, 0, 0>> myStream;
                                                   ^
./ws2812.h:9:9: error: unknown type name 'uint'; did you mean 'int'?
typedef uint ap_uint
        ^
./ws2812.h:9:21: error: expected ';' after top level declarator
typedef uint ap_uint
                    ^
                    ;
./ws2812.h:10:24: error: expected ';' after top level declarator
typedef ap_uint<32> led
                       ^
                       ;
./ws2812.h:11:25: error: expected ';' after top level declarator
typedef ap_uint<256> col
                        ^
                        ;
./ws2812.h:12:24: error: expected ';' after top level declarator
typedef ap_uint<1>* out
                       ^
                       ;
ws2812.cpp:37:6: error: variable has incomplete type 'void'
void ap_ctrl_hs(
     ^
ws2812.cpp:38:3: error: use of undeclared identifier 'mystream'
  mystream &A, 
  ^
ws2812.cpp:38:13: error: use of undeclared identifier 'A'
  mystream &A, 
            ^
ws2812.cpp:39:9: error: expected ';' after top level declarator
  out y)
        ^
        ;
11 errors generated.

ERROR: [HLS 200-70] Compilation errors found:
Pragma processor failed: In file included from ws2812.cpp:2:
./ws2812.h:8:44: error: use of undeclared identifier 'myStream'
typedef hls::stream<ap_axiu<256, 0, 0, 0>> myStream;
                                           ^
./ws2812.h:8:52: error: type name requires a specifier or qualifier
typedef hls::stream<ap_axiu<256, 0, 0, 0>> myStream;
                                                   ^
./ws2812.h:9:9: error: unknown type name 'uint'; did you mean 'int'?
typedef uint ap_uint
        ^
./ws2812.h:9:21: error: expected ';' after top level declarator
typedef uint ap_uint
                    ^
                    ;
./ws2812.h:10:24: error: expected ';' after top level declarator
typedef ap_uint<32> led
                       ^
                       ;
./ws2812.h:11:25: error: expected ';' after top level declarator
typedef ap_uint<256> col
                        ^
                        ;
./ws2812.h:12:24: error: expected ';' after top level declarator
typedef ap_uint<1>* out
                       ^
                       ;
ws2812.cpp:37:6: error: variable has incomplete type 'void'
void ap_ctrl_hs(
     ^
ws2812.cpp:38:3: error: use of undeclared identifier 'mystream'
  mystream &A, 
  ^
ws2812.cpp:38:13: error: use of undeclared identifier 'A'
  mystream &A, 
            ^
ws2812.cpp:39:9: error: expected ';' after top level declarator
  out y)
        ^
        ;
11 errors generated.
Failed checking during preprocessing.
    while executing
"source C:/Users/ispr/Desktop/hls/Exercise/ws2812/ws2812/solution1/csynth.tcl"
    invoked from within
"hls::main C:/Users/ispr/Desktop/hls/Exercise/ws2812/ws2812/solution1/csynth.tcl"
    ("uplevel" body line 1)
    invoked from within
"uplevel 1 hls::main {*}$args"
    (procedure "hls_proc" line 5)
    invoked from within
"hls_proc $argv"
